tests/e2e/ranges8.story
b = 0
a = b[:-1]
